--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-java:
 
-    runs-on: ubuntu-latest    
+    runs-on: self-hosted    
     steps:
     - name : Telechargement du code source
       uses: actions/checkout@v4
