--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
@@ -12,11 +9,11 @@ on:
 jobs:
   build-java:
 
-    runs-on: self-hosted
-    
+    runs-on: self-hosted    
     steps:
-    - uses: actions/checkout@v2
-
+    - name : Telechargement du code source
+      uses: actions/checkout@v4
+      
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
@@ -28,10 +25,12 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
-    - name: Build and Push Docker Image
-      uses: mr-smithers-excellent/docker-build-push@v4
-      with:
-        image: najaina23/nginxv2
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+  publish :
+    needs: build-java
+    runs-on: self-hosted    
+    steps:
+    - name: Lancement de publication 
+      run: echo "lancons la publication de l'image"
+
+    - name : Lancement de publish
+      run: echo "publication de code" 
