--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       run: ./gradlew build
 
     - name: Affichage
-      run: ls
+      run: ls ./build/libs/*
 
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
