--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,36 @@
-name: Java CI with Gradle
+# name: Java CI with Gradle
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+# on:
+#   push:
+#     branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
 
-jobs:
-  build-java:
+# jobs:
+#   build-java:
 
-    runs-on: self-hosted    
-    steps:
-    - name : Telechargement du code source
-      uses: actions/checkout@v4
+#     runs-on: self-hosted    
+#     steps:
+#     - name : Telechargement du code source
+#       uses: actions/checkout@v4
       
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+#     - name: Set up JDK 1.8
+#       uses: actions/setup-java@v1
+#       with:
+#         java-version: 1.8
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+#     - name: Grant execute permission for gradlew
+#       run: chmod +x gradlew
 
-    - name: Build with Gradle
-      run: ./gradlew build
+#     - name: Build with Gradle
+#       run: ./gradlew build
 
-  publish :
-    needs: build-java
-    runs-on: self-hosted    
-    steps:
-    - name: Lancement de publication 
-      run: echo "lancons la publication de l'image"
+#   publish :
+#     needs: build-java
+#     runs-on: self-hosted    
+#     steps:
+#     - name: Lancement de publication 
+#       run: echo "lancons la publication de l'image"
 
-    - name : Lancement de publish
-      run: echo "publication de code" 
+#     - name : Lancement de publish
+#       run: echo "publication de code" 
